--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "MTQwMDg1MjA0NjE3Njg1MDA5Mg.GhRjfo.6uf8Kh9QHfhyx5H6PmQftalINmCbyJgMrUEY0c",
+  "token": "",
   "owners": [
     "1233744354607108099",
     ""
